[gd_scene load_steps=9 format=3 uid="uid://brdt7hxt41p0s"]

[ext_resource type="Script" path="res://Scripts/bug_tri.gd" id="1_5d5is"]
[ext_resource type="Texture2D" uid="uid://be1gu5rwj0mdn" path="res://Sprites/Characters/Missing_Triangle.png" id="2_idouf"]
[ext_resource type="Script" path="res://Scripts/bug_hitbox.gd" id="3_dvi0f"]
[ext_resource type="PackedScene" uid="uid://cq1e21emss80p" path="res://Scenes/health_bar.tscn" id="3_u252i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2sxu3"]
atlas = ExtResource("2_idouf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4164x"]
atlas = ExtResource("2_idouf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7q16u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sxu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4164x")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4qntm"]
radius = 10.0499

[node name="bug_tri" type="CharacterBody2D"]
script = ExtResource("1_5d5is")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7q16u")
frame = 1
frame_progress = 0.194886

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, 1)

[node name="hitbox" type="Area2D" parent="."]
script = ExtResource("3_dvi0f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_4qntm")
debug_color = Color(0.992915, 0, 0.245263, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("3_u252i")]
offset_left = -10.0
offset_top = 12.0
offset_right = 10.0
offset_bottom = 16.0

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
